# Silencly-

./: .env.example  README.md  convert_logo.js  copy_exact_logo.js  copy_uploaded_logo.js  copy_uploaded_logo_transparent.js  create_transparent_logo.js  email-template.html  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  fix-index.js  fly.toml  index.html  make_logo.js  make_pngs.js  metadata.json  output.txt  package-lock.json  package.json  schema.json  server.ts  sqlite.db  test-assembly.js  test-fetch.js  test-key.js  test-key2.js  test-key3.js  vercel.json
.github/workflows/: release.yml
public/: llms.txt  manifest.json  robots.txt  sitemap.xml  sw.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ApiConsolePage.tsx  AuditLogFooter.tsx  BudPage.tsx  DemoPage.tsx  DictionaryDrawer.tsx  HistoryDrawer.tsx  IntegrationsSection.tsx  MicControl.tsx  PrivacyPage.tsx  SpotlightSearch.tsx  StatusPage.tsx  TermsPage.tsx  UseCasesPage.tsx  Waveform.tsx
src/components/blocks/: testimonials-with-marquee.tsx
src/components/ui/: card.tsx  chat-input.tsx  mac-os-dock.tsx  pricing-section-4.tsx  timeline-animation.tsx  twitter-testimonial-cards.tsx  vertical-cut-reveal.tsx
src/lib/: auth.ts  clerk-service.tsx  db-client.ts  firebase-service.tsx  safe-storage.ts  supabase-client.ts  supabase-service.tsx
